--- a/CentralServer/CentralServer/CentralServer.csproj
+++ b/CentralServer/CentralServer/CentralServer.csproj
@@ -49,8 +49,8 @@
     <Compile Include="ClientControl.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Log.cs" />
-    <Compile Include="Logging\Loggers\ConsoleLog.cs" />
-    <Compile Include="Logging\Loggers\NullLog.cs" />
+    <Compile Include="Logging\Loggers\ConsoleLogger.cs" />
+    <Compile Include="Logging\Loggers\NullLogger.cs" />
     <Compile Include="MainControl.cs" />
     <Compile Include="Messaging\Message.cs" />
     <Compile Include="Messaging\MessageQueue.cs" />
