--- a/CentralServer/CentralServer.UnitTest/CentralServer.UnitTest.csproj
+++ b/CentralServer/CentralServer.UnitTest/CentralServer.UnitTest.csproj
@@ -50,6 +50,15 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CentralServer\CentralServer.csproj">
+      <Project>{46702632-3e48-44d8-9b1e-e59db3428102}</Project>
+      <Name>CentralServer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
