--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -75,10 +75,10 @@
     <Compile Include="OpretProdukt\IProduct.cs" />
     <Compile Include="OpretProdukt\IProtocol.cs" />
     <Compile Include="OpretProdukt\ManagerFactory.cs" />
-    <Compile Include="OpretProdukt\PrjProductManager.cs" />
+    <Compile Include="OpretProdukt\PrjProductFactory.cs" />
     <Compile Include="OpretProdukt\PrjProtocol.cs" />
     <Compile Include="OpretProdukt\Product.cs" />
-    <Compile Include="OpretProdukt\ProductManager.cs" />
+    <Compile Include="OpretProdukt\ProductFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -105,6 +105,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
