--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SharedLib">
+      <HintPath>..\SharedLib\bin\Release\SharedLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -67,6 +70,9 @@
       <DependentUpon>AddProductWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="AddProduct\AddProductCB.cs" />
+    <Compile Include="AddProduct\IAddProduct.cs" />
+    <Compile Include="AddProduct\IProtocol.cs" />
+    <Compile Include="AddProduct\PrjProtokol.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -77,7 +83,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddProduct\PrjAddProductCB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
