--- a/.gitignore
+++ b/.gitignore
@@ -142,8 +142,7 @@ publish/
 
 # NuGet Packages
 *.nupkg
-# The packages folder can be ignored because of Package Restore
-**/packages/*
+# The packages folder can be ignored because of Package Restore. NO IT CAN'T. Jenkins kan ikke finde ud af det.
 # except build/, which is used as an MSBuild target.
 !**/packages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
