--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharedLib">
-      <HintPath>..\SharedLib\bin\Release\SharedLib.dll</HintPath>
+      <HintPath>..\..\SharedLib\bin\Debug\SharedLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="Communication\Client.cs" />
     <Compile Include="Communication\IClient.cs" />
+    <Compile Include="Error.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
