--- a/KasseApparat/KasseApparat.csproj
+++ b/KasseApparat/KasseApparat.csproj
@@ -60,6 +60,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DBcontrol.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="ShoppingList.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
