--- a/KasseApparat/KasseApparat.csproj
+++ b/KasseApparat/KasseApparat.csproj
@@ -61,6 +61,7 @@
     </ApplicationDefinition>
     <Compile Include="DBcontrol.cs" />
     <Compile Include="IConnection.cs" />
+    <Compile Include="ProductButtonControl.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ShoppingList.cs" />
     <Page Include="MainWindow.xaml">
