--- a/KasseApparat/KasseApparat.UnitTest/KasseApparat.UnitTest.csproj
+++ b/KasseApparat/KasseApparat.UnitTest/KasseApparat.UnitTest.csproj
@@ -36,9 +36,8 @@
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="SharedLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SharedLib\bin\Release\SharedLib.dll</HintPath>
+    <Reference Include="SharedLib">
+      <HintPath>..\..\SharedLib\SharedLib\bin\Release\SharedLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
