--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -82,7 +82,7 @@
     </Compile>
     <Compile Include="Communication\Client.cs" />
     <Compile Include="Communication\IClient.cs" />
-    <Compile Include="Error.cs" />
+    <Compile Include="AddProduct\Brains\Error.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
