--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -58,32 +58,32 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="AddProduct\Views\AddProductWindow.xaml">
+    <Page Include="Views\AddProductWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="AddProduct\Views\AddProductWindow.xaml.cs">
+    <Compile Include="Views\AddProductWindow.xaml.cs">
       <DependentUpon>AddProductWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AddProduct\Models\BackendProduct.cs" />
-    <Compile Include="AddProduct\Brains\AddProductCB.cs" />
-    <Compile Include="AddProduct\ViewModels\AddProductViewModel.cs" />
-    <Compile Include="AddProduct\Brains\IAddProduct.cs" />
-    <Compile Include="AddProduct\Brains\IProtocol.cs" />
-    <Compile Include="AddProduct\Brains\PrjProtokol.cs" />
-    <Compile Include="AddProduct\Commands\ProductAddCommand.cs" />
+    <Compile Include="Models\BackendProduct.cs" />
+    <Compile Include="Brains\AddProductCB.cs" />
+    <Compile Include="ViewModels\AddProductViewModel.cs" />
+    <Compile Include="Brains\IAddProduct.cs" />
+    <Compile Include="Brains\IProtocol.cs" />
+    <Compile Include="Brains\PrjProtokol.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Communication\Client.cs" />
     <Compile Include="Communication\IClient.cs" />
-    <Compile Include="AddProduct\Brains\Error.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Brains\Error.cs" />
+    <Compile Include="Dependencies\RelayCommand.cs" />
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -115,6 +115,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
