--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharedLib">
-      <HintPath>..\..\SharedLib\obj\Release\SharedLib.dll</HintPath>
+      <HintPath>..\..\SharedLib\SharedLib\bin\Release\SharedLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
