--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -66,11 +66,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Models\BackendProduct.cs" />
+    <Compile Include="Models\BackendProductList.cs" />
+    <Compile Include="Models\MainWindowModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AddProductWindow.xaml.cs">
       <DependentUpon>AddProductWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\BackendProduct.cs" />
     <Compile Include="Brains\AddProductCB.cs" />
     <Compile Include="ViewModels\AddProductViewModel.cs" />
     <Compile Include="Brains\IAddProduct.cs" />
