--- a/KasseApparat/KasseApparat/KasseApparat.csproj
+++ b/KasseApparat/KasseApparat/KasseApparat.csproj
@@ -59,9 +59,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ProductButtonControl\ButtonContent.cs" />
+    <Compile Include="ProductButtonControl\ProductButtonList.cs" />
     <Compile Include="DBcontrol.cs" />
     <Compile Include="IConnection.cs" />
-    <Compile Include="ProductButtonControl.cs" />
+    <Compile Include="ProductButtonControl\ProductButtonControl.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ShoppingList.cs" />
     <Page Include="MainWindow.xaml">
