--- a/CentralServer/CentralServer/CentralServer.csproj
+++ b/CentralServer/CentralServer/CentralServer.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Log.cs" />
     <Compile Include="Logging\Loggers\ConsoleLogger.cs" />
+    <Compile Include="Logging\Loggers\ConsoleColorLogger.cs" />
     <Compile Include="Logging\Loggers\NullLogger.cs" />
     <Compile Include="MainControl.cs" />
     <Compile Include="Messaging\Message.cs" />
