Added unit test for XmlBuffer

--- a/SharedLib/SharedLib.UnitTest/SharedLib.UnitTest.csproj
+++ b/SharedLib/SharedLib.UnitTest/SharedLib.UnitTest.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ProtocolUnitTest.cs" />
     <Compile Include="wrongCmd.cs" />
     <Compile Include="ProtocolMarshallers\XmlMarshalUnitTest.cs" />
+    <Compile Include="XmlBufferUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
