--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -67,8 +67,11 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Models\BackendProduct.cs" />
+    <Compile Include="Models\BackendProductCategory.cs" />
+    <Compile Include="Models\BackendProductCategoryList.cs" />
     <Compile Include="Models\BackendProductList.cs" />
     <Compile Include="Models\MainWindowModel.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AddProductWindow.xaml.cs">
       <DependentUpon>AddProductWindow.xaml</DependentUpon>
