--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -39,6 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Messaging\Message.cs" />
+    <Compile Include="Messaging\MessageQueue.cs" />
+    <Compile Include="Messaging\Messages\DataRecievedMsg.cs" />
+    <Compile Include="Messaging\MessageThread.cs" />
+    <Compile Include="Models\Catalogue.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Purchase.cs" />
     <Compile Include="Models\PurchasedProduct.cs" />
@@ -59,6 +64,9 @@
     <Compile Include="Protocol\Protocol.cs" />
     <Compile Include="Protocol\ProtocolMarshallers\XmlMarshal.cs" />
     <Compile Include="Protocol\XmlBuffer.cs" />
+    <Compile Include="Sockets\SocketConnection.cs" />
+    <Compile Include="Sockets\SocketMsgReceiver.cs" />
+    <Compile Include="Threading\ThreadBase.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
