--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Protocol\CmdMarshallers\DeleteProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\GetCatalogueMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCreatedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductDeletedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\RegisterPurchaseMarshal.cs" />
     <Compile Include="Protocol\Command.cs" />
     <Compile Include="Protocol\Commands\CatalogueDetailsCmd.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Protocol\Commands\DeleteProductCmd.cs" />
     <Compile Include="Protocol\Commands\GetCatalogueCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCreatedCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductDeletedCmd.cs" />
     <Compile Include="Protocol\Commands\RegisterPurchaseCmd.cs" />
     <Compile Include="Protocol\ICmdMarshal.cs" />
     <Compile Include="Protocol\IProtocolMarshal.cs" />
