--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Protocol\Commands\ProductCreatedCmd.cs" />
     <Compile Include="Protocol\Commands\RegisterPurchaseCmd.cs" />
     <Compile Include="Protocol\ICmdMarshal.cs" />
+    <Compile Include="Protocol\IProtocolBuffer.cs" />
     <Compile Include="Protocol\IProtocolMarshal.cs" />
     <Compile Include="Protocol\Protocol.cs" />
     <Compile Include="Protocol\ProtocolMarshallers\XmlMarshal.cs" />
