--- a/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
+++ b/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
@@ -41,6 +41,10 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Prism, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
+      <HintPath>..\packages\Prism.Core.6.1.0\lib\net45\Prism.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="SharedLib">
       <HintPath>..\..\SharedLib\SharedLib\bin\Debug\SharedLib.dll</HintPath>
     </Reference>
@@ -56,11 +60,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddProductCBUnitTests.cs" />
-    <Compile Include="AddProductVMUnittest.cs" />
-    <Compile Include="ClientUnitTests.cs" />
-    <Compile Include="MainWindowVMUnitTests.cs" />
-    <Compile Include="PrjProtocolUnitTests.cs" />
+    <Compile Include="Brains\AddProductCBUnitTests.cs" />
+    <Compile Include="ViewModels\AddProductVMUnittest.cs" />
+    <Compile Include="Brains\ClientUnitTests.cs" />
+    <Compile Include="ViewModels\MainWindowVMUnitTests.cs" />
+    <Compile Include="Models\EventAggregatorUnitTests.cs" />
+    <Compile Include="Brains\PrjProtocolUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
