--- a/Backend/Backend.Unit.Tests/packages.config
+++ b/Backend/Backend.Unit.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NSubstitute" version="1.9.1.0" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
+  <package id="Prism.Core" version="6.1.0" targetFramework="net452" />
 </packages>
