Added ProductCategory Cmd's & Marshal's

--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -48,6 +48,12 @@
     <Compile Include="Protocol\CmdMarshallers\CreateProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\DeleteProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\GetCatalogueMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ConfigureProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\CreateProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\DeleteProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryConfiguredMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryCreatedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryDeletedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCreatedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductDeletedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\RegisterPurchaseMarshal.cs" />
@@ -56,6 +62,12 @@
     <Compile Include="Protocol\Commands\CreateProductCmd.cs" />
     <Compile Include="Protocol\Commands\DeleteProductCmd.cs" />
     <Compile Include="Protocol\Commands\GetCatalogueCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\ConfigureProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\CreateProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\DeleteProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryConfiguredCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryCreatedCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryDeletedCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCreatedCmd.cs" />
     <Compile Include="Protocol\Commands\ProductDeletedCmd.cs" />
     <Compile Include="Protocol\Commands\RegisterPurchaseCmd.cs" />
