Implemented EditPC & PCEdited

--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -48,10 +48,10 @@
     <Compile Include="Protocol\CmdMarshallers\CreateProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\DeleteProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\GetCatalogueMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ConfigureProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\EditProductCategoryMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\CreateProductCategoryMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\DeleteProductCategoryMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryConfiguredMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryEditedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryCreatedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryDeletedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCreatedMarshal.cs" />
@@ -62,10 +62,10 @@
     <Compile Include="Protocol\Commands\CreateProductCmd.cs" />
     <Compile Include="Protocol\Commands\DeleteProductCmd.cs" />
     <Compile Include="Protocol\Commands\GetCatalogueCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\ConfigureProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\EditProductCategoryCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCategoryCommands\CreateProductCategoryCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCategoryCommands\DeleteProductCategoryCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryConfiguredCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryEditedCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryCreatedCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryDeletedCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCreatedCmd.cs" />
