--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -47,17 +47,21 @@
     <Compile Include="Protocol\CmdMarshallers\CatalogueDetailsMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\CreateProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\DeleteProductMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\EditProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\GetCatalogueMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductCreatedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\ProductDeletedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductEditedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\RegisterPurchaseMarshal.cs" />
     <Compile Include="Protocol\Command.cs" />
     <Compile Include="Protocol\Commands\CatalogueDetailsCmd.cs" />
     <Compile Include="Protocol\Commands\CreateProductCmd.cs" />
     <Compile Include="Protocol\Commands\DeleteProductCmd.cs" />
+    <Compile Include="Protocol\Commands\EditProductCmd.cs" />
     <Compile Include="Protocol\Commands\GetCatalogueCmd.cs" />
     <Compile Include="Protocol\Commands\ProductCreatedCmd.cs" />
     <Compile Include="Protocol\Commands\ProductDeletedCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductEditedCmd.cs" />
     <Compile Include="Protocol\Commands\RegisterPurchaseCmd.cs" />
     <Compile Include="Protocol\ICmdMarshal.cs" />
     <Compile Include="Protocol\IProtocol.cs" />
