--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Models\Events\EventAggregator.cs" />
     <Compile Include="Models\Events\Events.cs" />
     <Compile Include="Models\SocketEvents\ISocketEventHandlers.cs" />
+    <Compile Include="Models\SocketEvents\SocketEventHandlers.cs" />
     <Compile Include="ViewModels\AddCategoryViewModel.cs" />
     <Compile Include="ViewModels\EditCategoryViewModel.cs" />
     <Compile Include="Views\AddCategoryWindow.xaml.cs">
