A lot of changes!

--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -46,35 +46,35 @@
     <Compile Include="Models\PurchasedProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol\CmdMarshallers\CatalogueDetailsMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\CreateProductMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\DeleteProductMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\EditProductMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\Product\CreateProductMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\Product\DeleteProductMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\Product\EditProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\GetCatalogueMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\EditProductCategoryMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\CreateProductCategoryMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\DeleteProductCategoryMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryEditedMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryCreatedMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCategoryMarshallers\ProductCategoryDeletedMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductCreatedMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductDeletedMarshal.cs" />
-    <Compile Include="Protocol\CmdMarshallers\ProductEditedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategory\EditProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategory\CreateProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategory\DeleteProductCategoryMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategory\ProductCategoryEditedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategory\ProductCategoryCreatedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\ProductCategory\ProductCategoryDeletedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\Product\ProductCreatedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\Product\ProductDeletedMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\Product\ProductEditedMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\RegisterPurchaseMarshal.cs" />
     <Compile Include="Protocol\Command.cs" />
     <Compile Include="Protocol\Commands\CatalogueDetailsCmd.cs" />
-    <Compile Include="Protocol\Commands\CreateProductCmd.cs" />
-    <Compile Include="Protocol\Commands\DeleteProductCmd.cs" />
-    <Compile Include="Protocol\Commands\EditProductCmd.cs" />
+    <Compile Include="Protocol\Commands\Product\CreateProductCmd.cs" />
+    <Compile Include="Protocol\Commands\Product\DeleteProductCmd.cs" />
+    <Compile Include="Protocol\Commands\Product\EditProductCmd.cs" />
     <Compile Include="Protocol\Commands\GetCatalogueCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\EditProductCategoryCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\CreateProductCategoryCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\DeleteProductCategoryCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryEditedCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryCreatedCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCategoryCommands\ProductCategoryDeletedCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductCreatedCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductDeletedCmd.cs" />
-    <Compile Include="Protocol\Commands\ProductEditedCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategory\EditProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategory\CreateProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategory\DeleteProductCategoryCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategory\ProductCategoryEditedCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategory\ProductCategoryCreatedCmd.cs" />
+    <Compile Include="Protocol\Commands\ProductCategory\ProductCategoryDeletedCmd.cs" />
+    <Compile Include="Protocol\Commands\Product\ProductCreatedCmd.cs" />
+    <Compile Include="Protocol\Commands\Product\ProductDeletedCmd.cs" />
+    <Compile Include="Protocol\Commands\Product\ProductEditedCmd.cs" />
     <Compile Include="Protocol\Commands\RegisterPurchaseCmd.cs" />
     <Compile Include="Protocol\ICmdMarshal.cs" />
     <Compile Include="Protocol\IProtocol.cs" />
