Added eventhandling for OnConnectionOpened and made gui bind to that strng, shit doesn't work yo.

--- a/CentralServer/CentralServer/CentralServer.csproj
+++ b/CentralServer/CentralServer/CentralServer.csproj
@@ -43,7 +43,7 @@
     </Reference>
     <Reference Include="SharedLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\SharedLib\SharedLib\bin\Release\SharedLib.dll</HintPath>
+      <HintPath>..\..\SharedLib\SharedLib\bin\Debug\SharedLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
