--- a/KasseApparat/KasseApparat/KasseApparat.csproj
+++ b/KasseApparat/KasseApparat/KasseApparat.csproj
@@ -64,6 +64,8 @@
     <Compile Include="DBcontrol.cs" />
     <Compile Include="IConnection.cs" />
     <Compile Include="ProductButtonControl\ProductButtonControl.cs" />
+    <Compile Include="ProductMenuControl\MenuCategory.cs" />
+    <Compile Include="ProductMenuControl\CategoriesMenu.cs" />
     <Compile Include="ProductCategoryList.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ShoppingList.cs" />
