AdjustToLib Test Restruct
Tilpasset ny purchaseproduct
Flere unit tests
Restructed

--- a/KasseApparat/KasseApparat.UnitTest/KasseApparat.UnitTest.csproj
+++ b/KasseApparat/KasseApparat.UnitTest/KasseApparat.UnitTest.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBcontrolTest.cs" />
+    <Compile Include="FakeDBcontrolTest.cs" />
+    <Compile Include="ProductCategoryListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShoppingListTest.cs" />
   </ItemGroup>
