--- a/KasseApparat/KasseApparat/KasseApparat.csproj
+++ b/KasseApparat/KasseApparat/KasseApparat.csproj
@@ -59,6 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Connection.cs" />
     <Compile Include="ProductButtonControl\ButtonContent.cs" />
     <Compile Include="ProductButtonControl\ProductButtonList.cs" />
     <Compile Include="DBcontrol.cs" />
