--- a/KasseApparat/KasseApparat.UnitTest/KasseApparat.UnitTest.csproj
+++ b/KasseApparat/KasseApparat.UnitTest/KasseApparat.UnitTest.csproj
@@ -37,7 +37,7 @@
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="SharedLib">
-      <HintPath>..\..\SharedLib\SharedLib\bin\Debug\SharedLib.dll</HintPath>
+      <HintPath>..\..\SharedLib\SharedLib\bin\Release\SharedLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
