New DB context and migration

--- a/CentralServer/CentralServer/App.config
+++ b/CentralServer/CentralServer/App.config
@@ -18,7 +18,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="YourConnectionName"
+    <add name="LocalDBv11"
         providerName="System.Data.SqlClient"
         connectionString="Server=(localdb)\v11.0; Database=Projekt4;
     Integrated Security=SSPI" />
