Fixed crash when moving products

--- a/CentralServer/CentralServer/App.config
+++ b/CentralServer/CentralServer/App.config
@@ -20,7 +20,7 @@
   <connectionStrings>
     <add name="YourConnectionName"
         providerName="System.Data.SqlClient"
-        connectionString="Server=(localdb)\v11.0; Database=Projekt4;
+        connectionString="Server=(localdb)\ProjectsV12; Database=Projekt4;
     Integrated Security=SSPI" />
   </connectionStrings>
 </configuration>
